# rak-flowmind

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  OPENCLAW_OPERATOR.md  README.md  demo_agent.py  pyproject.toml  simulate_openclaw.py  verify_any_agent.py
.claude/skills/flowmind-onboard/: SKILL.md
.claude/skills/flowmind-test-skill/: SKILL.md
docs/skills/: feishu_kb.md
docs/superpowers/plans/: 2026-07-02-flowmind-skill-sdk.md
docs/superpowers/specs/: 2026-07-01-flowmind-skill-sdk-design.md  2026-07-09-feishu-kb-search-fix-design.md
examples/: README.md  localize_batch_demo.py  localize_cancel_demo.py  localize_download_demo.py  localize_retry_demo.py  localize_status_demo.py  marketing_image_gen_real.py
scripts/: build_seed_from_docx.py
src/flowmind/: __init__.py  config.py  contracts.py  discover.py  errors.py  interactive.py  manifest.py  rules.py  server.py  skill.py  vl_client.py
src/flowmind/skills/: __init__.py  _image_backend.py  _scene_extractor.py  feishu_kb.py  feishu_kb_seed.json  inventory_risk.py  localize_batch.py  localize_cancel.py  localize_download.py  (+4 more)
src/video_localization_engine/: ARCHITECTURE.md  __init__.py
tests/: test_config.py  test_contracts.py  test_discover.py  test_errors.py  test_failure_category.py  test_feishu_kb.py  test_interactive.py  test_inventory_risk.py  test_localize_batch.py  test_localize_batch_chunking.py  test_localize_control.py  test_localize_failfast.py  test_localize_retry.py  test_localize_status.py  test_localize_status_concurrent.py  test_localize_video.py  test_localizer_defaults_and_stall.py  test_manifest.py  test_marketing_image_gen.py  test_marketing_image_gen_refactor.py  test_rules.py  test_security_fixes.py  test_server_mcp.py  test_skill.py  test_smoke.py  test_subtitle_clearing_sla.py
(+73 files in other folders)
