[project]
name = "rak-flowmind"
version = "0.1.0"
description = "FlowMind Skill SDK —— 对龙虾(OpenClaw)友好的技能底座"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.27,<2",
    "pydantic>=2",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
flowmind-mcp = "flowmind.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowmind"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
