[project]
name = "rak-flowmind"
version = "0.1.0"
description = "FlowMind Skill SDK —— 对龙虾(OpenClaw)友好的技能底座"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.27,<2",
    "pydantic>=2",
    "tomli-w>=1.0",
    # feishu_kb skill deps
    "numpy>=1.26",
    "jieba>=0.42.1",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.3",
    # PR #4: localize_* HTTP calls
    "requests>=2.34.2",
    # PR #5: allin-api gpt-image-2 + chat completions
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "python-docx>=1.0",  # 用于 scripts/build_seed_from_docx.py 重生 seed
]

[project.scripts]
flowmind-mcp = "flowmind.server:main"
flowmind-init = "flowmind.interactive:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowmind"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
